eval_intern.h: __builtin_longjmp requires literal 1 on gcc 4.9

* eval_intern.h (rb_threadptr_tag_jump): gcc 4.9 disallows other than
  literal 1 as the second argument of __builtin_longjmp().
  [ruby-core:61800] [Bug #9692]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@45504 b2dd03c8-39d4-4d8f-98ff-823fe69b080e