eval_intern.h
@@ -141,7 +141,8 @@ NORETURN(static inline void rb_threadptr_tag_jump(rb_thread_t *, int));
 static inline void
 rb_threadptr_tag_jump(rb_thread_t *th, int st)
 {
-    ruby_longjmp(th->tag->buf, (th->state = st));
+    th->state = st;
+    ruby_longjmp(th->tag->buf, 1);
 }
 
 /*
